src/main/java/com/example/linkingrest/error/exception/EmailSignupFailedException.java
package com.example.linkingrest.error.exception;

public class EmailSignupFailedException extends RuntimeException{
    public EmailSignupFailedException(){
        super();
    }

}
